--- a/app/app.css
+++ b/app/app.css
@@ -5,6 +5,10 @@
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+:root {
+  font-family: "Inter", sans-serif;
+}
+
 html,
 body {
   @apply bg-white dark:bg-gray-950;
@@ -12,4 +16,9 @@ body {
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
   }
+}
+
+body {
+  margin: 0;
+  min-height: 100vh;
 }
